--- a/index.html
+++ b/index.html
@@ -28,3 +28,5 @@
   </footer>
 </body>
 </html>
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
