--- a/index.html
+++ b/index.html
@@ -30,3 +30,7 @@
 </html>
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
+<section class="banner">
+  <img src="banner.png" alt="Banner Nocthyr">
+</section>
+
